<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/login_fragment">

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.example.halanchallenge.ui.auth.LoginFragment"
        android:label="@string/login_label"
        tools:layout="@layout/activity_login">
        <action
            android:id="@+id/action_login_fragment_to_profile_fragment"
            app:destination="@id/profile_fragment"
            app:popUpTo="@id/login_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.example.halanchallenge.ui.profile.ProfileFragment"
        android:label="@string/profile_label"
        tools:layout="@layout/profile_fragment"/>

    <fragment
        android:id="@+id/product_details_fragment"
        android:name="com.example.halanchallenge.ui.productDetails.ProductDetailsFragment"
        android:label="@string/product_label"
        tools:layout="@layout/product_details_fragment"/>

</navigation>